nat-gateway.tf
resource "aws_eip" "nat" {
  domain = "vpc"  
  
  tags = {
    Name = "${var.project_name}-nat-eip"
  }
  
  
  depends_on = [aws_internet_gateway.main]
}


resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id  
  
  tags = {
    Name = "${var.project_name}-nat-gateway"
  }
  

  depends_on = [aws_internet_gateway.main]
}


resource "aws_route" "private_nat_gateway" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"  
  nat_gateway_id         = aws_nat_gateway.main.id
}
