rds.tf
resource "aws_db_subnet_group" "main" {
  name       = "${var.project_name}-db-subnet-group"
  subnet_ids = aws_subnet.private[*].id 
  
  tags = {
    Name = "${var.project_name}-db-subnet-group"
  }
}


resource "aws_db_instance" "primary" {
  identifier     = "${var.project_name}-db-primary"
  engine         = "mysql"
  engine_version = "8.0"
  
  
  instance_class        = var.db_instance_class
  allocated_storage     = 20  
  storage_type          = "gp3"
  storage_encrypted     = true
  max_allocated_storage = 100  
  
  
  db_name  = var.db_name
  username = var.db_username
  password = var.db_password
  port     = 3306
  
  
  db_subnet_group_name   = aws_db_subnet_group.main.name
  vpc_security_group_ids = [aws_security_group.rds.id]
  publicly_accessible    = false  

  
  multi_az = false  
  
  
  backup_retention_period = 7  
  backup_window          = "03:00-04:00"  
  maintenance_window     = "Mon:04:00-Mon:05:00"  
  
  
  skip_final_snapshot       = true  
  deletion_protection       = false  
  delete_automated_backups  = true
  
  
  enabled_cloudwatch_logs_exports = ["error", "general", "slowquery"]
  monitoring_interval             = 60  
  
  
  performance_insights_enabled = true
  performance_insights_retention_period = 7
  
  tags = {
    Name = "${var.project_name}-db-primary"
    Role = "Database"
    Type = "Primary"
  }
}
